test/Fail/OnlyScopeCheckingJS.agda
-- Andreas, 2024-09-09 issue #5101 and commit 08c553acdc7d5aa1cde0842c287d73e5561b18c1
-- Trigger error for backend not supporting --only-scope-checking
-- that is not already caught in Agda.Main.getInteractor.

-- Expected error:
-- The backend JS does not support --only-scope-checking.
